[tool.poetry]
name = "coursework-3"
version = "0.1.0"
description = "Реализация виджета, что выводит последние операции по счёту"
authors = ["Gamid <gamaizingg@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_3"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
